# APilus

./: .dockerignore  .gitignore  README.md  build_RAG.py  docker-compose.yml  pyproject.toml  qwen3_4b_guide.md  qwen_notebook.ipynb  test_qwen3_4b.ipynb
.github/workflows/: backend-tests.yml
RAG/data/: corpus_keywords.yaml  program_aliases.yaml  subpage_keywords.yaml
RAG/faiss_index_store/: index.pkl  version.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/APilus/: __init__.py  admin.py  apps.py  index.py  llm.py  llm_client.py  loader.py  models.py  normalize.py  pipeline.py  prompts.py  query.py  rag_config.py  retrieval.py  tests.py  urls.py  views.py
backend/APilus/management/commands/: build_rag_index.py
backend/APilus/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/llm/: services.py
backend/models/qwen/models--Qwen--Qwen3.5-4B/models--Qwen--Qwen3.5-4B/refs/: main
backend/models/qwen/models--Qwen--Qwen3.5-4B/models--Qwen--Qwen3.5-4B/snapshots/851bf6e806efd8d0a36b00ddf55e13ccb7b8cd0a/: chat_template.jinja  config.json  model.safetensors.index.json
backend/models/qwen/models--Qwen--Qwen3.5-4B/snapshots/851bf6e806efd8d0a36b00ddf55e13ccb7b8cd0a/: tokenizer.json  tokenizer_config.json
frontend/: Dockerfile  index.html
frontend/src/: App.jsx
model_tests/: Turboquant.ipynb  test_qwen-2.5-3b-Instruct-bnb-4bit.ipynb  test_qwen-3-4b-bnb-4bit.ipynb  test_qwen-3-4b.ipynb  test_qwen2.5-3b-instruct.ipynb
scraper_and_data/: README.md  acu.edu.tr_scraper.py  acu_data.json  bologna_scraper.py
