[project]
name = "APilus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "django>=5.2.12",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
    "torch>=2.4.0",
    "accelerate>=0.34.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "huggingface-hub>=0.25.0",
    "vllm>=0.11.0",
    "bitsandbytes>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.6",
]