[project]
name = "APilus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asgiref==3.11.1",
    "astor==0.8.1",
    "asttokens==3.0.1",
    "async-lru==2.3.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bitsandbytes==0.42.0",
    "blake3==1.0.8",
    "bleach==6.3.0",
    "build==1.4.2",
    "cachetools==7.0.5",
    "cbor2==5.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "chromadb==1.5.5",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "compressed-tensors==0.11.0",
    "cuda-pathfinder==1.5.0",
    "cupy-cuda12x==14.0.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "depyf==0.19.0",
    "dill==0.4.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "django==5.2.12",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "dnspython==2.8.0",
    "durationpy==0.10",
    "einops==0.8.2",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "fastapi==0.135.2",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.15.1",
    "fastar==0.9.0",
    "fastjsonschema==2.21.2",
    "filelock==3.25.2",
    "flatbuffers==25.12.19",
    "fqdn==1.5.1",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "gguf==0.18.0",
    "googleapis-common-protos==1.73.1",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==1.8.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "interegular==0.3.3",
    "ipykernel==7.2.0",
    "ipynb==0.5.1",
    "ipython==9.10.1",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "joblib==1.5.3",
    "json5==0.14.0",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kubernetes==35.0.0",
    "lark==1.2.2",
    "llguidance==0.7.30",
    "llvmlite==0.44.0",
    "lm-format-enforcer==0.11.3",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistral-common==1.10.0",
    "mistune==3.2.0",
    "mmh3==5.2.1",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "msgspec==0.20.0",
    "multidict==6.7.1",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "notebook==7.5.5",
    "notebook-shim==0.2.4",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "oauthlib==3.3.1",
    "onnxruntime==1.24.4",
    "openai==2.30.0",
    "openai-harmony==0.0.8",
    "opencv-python-headless==4.13.0.92",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "orjson==3.11.7",
    "outlines-core==0.2.11",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "partial-json-parser==0.2.1.1.post7",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "prometheus-client==0.24.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psycopg2-binary>=2.9.0",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pybase64==1.4.3",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pypika==0.51.1",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "ray==2.54.1",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.33.0",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "send2trash==2.1.0",
    "sentence-transformers==5.3.0",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.56.0",
    "setproctitle==1.3.7",
    "setuptools==79.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soupsieve==2.8.3",
    "soxr==1.0.0",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tinycss2==1.4.0",
    "tokenizers==0.22.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.4.0",
    "triton==3.4.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "uvloop==0.22.1",
    "vllm==0.11.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "widgetsnbextension==4.0.15",
    "xformers==0.0.32.post1",
    "xgrammar==0.1.25",
    "yarl==1.23.0",
    "zipp==3.23.0"
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "ruff==0.15.8"
]