[project]
name = "APilus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "psycopg2-binary",
    "httpx",
    "uvicorn",
	"langchain-community",
	"langchain-huggingface",
	"langchain-text-splitters",
	"sentence-transformers",
	"faiss-cpu",
	"langchain",
	"pyyaml",
]

[tool.uv]
package = false


[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
]
